--- a/web/activities.html
+++ b/web/activities.html
@@ -37,11 +37,11 @@
 
   <h2 class="event-title">Regular Events</h2>    
     <h3> Chapter Meetings</h3>
-     <p> We meet on the second Saturday of every month at 4 pm.  New members should join at 3:30 for an orientation.  Our meetings have been mostly online since covid began, but we are hoping to have more in-person meetings in the future. </p>
+     <p> We meet on the second Saturday of every month at 4 pm.  New members should join at 3:30 for an orientation.  Our meetings have been mostly online since Covid began, but we are hoping to have more in-person meetings in the future. </p>
      <p> Join our <a href="https://www.meetup.com/Citizens-Climate-Lobby-Silicon-Valley-East/" target="_blank">Meetup</a> to get notifications of meetings. You can also write us directly at the address in the footer for the link/directions.
      <h3> Work Sessions </h3>
      <p> These are informal get-togethers, via zoom, where we work on group or individual CCL projects.  This helps those of us prone to procrastination , but also gives us space to get feedback. It's also a great time for newer members to ask questions and get training in things like writing letters to the editor. </p>
-     <p> We usually determine the date/time at the Chapter meeting, and it is available to members in the minutes. [shall I give the minutes link?]</p>
+     <p> We usually determine the date/time at the Chapter meeting, and it is available to members in the minutes.</p>
      <h3> Tabling </h3>
      <p> In addition to special events (like Earth Day) we also staff information tables every month at local farmers' markets. You can help even if you're very new -- it's a great way to learn from more experienced members!</p>
      <p> Right now we are at the Hayward market on the third Saturday of odd months and at the Newark one on the third Sunday of even months.  Stop by to chat with one of us!</p>
@@ -50,7 +50,7 @@
       
       <h3> National Conference</h3>   
        <img src="images/DCphoto.jpg" id="image-DC" alt="Hundreds of CCL volunteers posing on the capitol steps"/>
-      <p> CCLers from all over the country (and the world!) get together every year for a conference and lobby effort.  This year we are still lobbying virtually because of tightened security at the capitol, but the conference will be in person for the first time since Covid.  It is valuable and inspiring to meet with so many volunteers and exchange ideas and viewpoints.  More information on the <a href="https://www.eventbrite.com/e/the-ccl-june-conference-is-back-registration-275678962197" target="_blank">registration page</a>.
+      <p> CCLers from all over the country (and the world!) get together every year for a conference and lobby effort.  This year we are still lobbying virtually because of tightened security at the capitol, but the conference will be in person for the first time since Covid.  It is valuable and inspiring to meet with so many volunteers and exchange ideas and viewpoints.  More information on <a href="https://citizensclimatelobby.org/climate-change-conferences/" target="_blank">CCL's conference page</a>.
    
      <h3> Other events </h3>
      <p> Something about check social media and/or join active group to hear about other events</p>
