--- a/web/OctoberEarthDay2022.html
+++ b/web/OctoberEarthDay2022.html
@@ -10,28 +10,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <img src="images/oct_earth_day_splash_image.png" alt="three photos showing a woman writing on a clipboard while another looks on, a small group of people walking down a path next to a lake, and a person with a bicycle talking to someone at a booth that says 'Climate Change Solution'" class="splash-image"/>
-    <p class="tagline">Citizens' Climate Lobby Silicon Valley East presents</p>
-    <h1>EARTH DAY<br/>
-      <span class="subtitle">ELECTION EDITION</span>
-    </h1>
-    <p class="tagline">Because we should celebrate the Earth more than once a year</p>
-    <div class="details">
-      <div class="detail when">
-        <h2>October 22, 2022</h2>
-        <p>10 AM - 2 PM</p>
+    <div class="content">
+      <img src="images/oct_earth_day_splash_image.png" alt="three photos showing a woman writing on a clipboard while another looks on, a small group of people walking down a path next to a lake, and a person with a bicycle talking to someone at a booth that says 'Climate Change Solution'" class="splash-image"/>
+      <div class="title-block">
+        <p class="tagline">Citizens' Climate Lobby Silicon Valley East presents</p>
+        <div class="earth-day-logo">
+          <h1>EARTH DAY</h1>
+          <span class="subtitle">ELECTION EDITION</span>
+        </div>
+        <p class="tagline bottom-tagline">Because we should celebrate the Earth more than once a year</p>
       </div>
-      <div class="detail where">
-        <a href="https://maps.app.goo.gl/7AGchXYTxW75Fmb66?g_st=ic">
-          <h2>At Lake Elizabeth</h2>
-          <p>behind the performance pavilion</p>
-        </a>
-      </div>
-      <div class="detail walks">
-        <h2>Walk &amp; talk about climate</h2>
-        <p>Casual walks around Lake Elizabeth</p>
-        <p>@ 10:00 AM</p>
-        <p>@ 11:30 AM</p>
+      <div class="details">
+        <div class="detail when">
+          <h2>October 22, 2022</h2>
+          <p>10 AM - 2 PM</p>
+        </div>
+        <div class="detail where">
+          <a href="https://maps.app.goo.gl/7AGchXYTxW75Fmb66?g_st=ic">
+            <h2>At Lake Elizabeth</h2>
+            <p>behind the performance pavilion</p>
+          </a>
+        </div>
+        <div class="detail walks">
+          <h2>Walk &amp; talk about climate</h2>
+          <p>Casual walks around Lake Elizabeth</p>
+          <p>@ 10:00 AM</p>
+          <p>@ 11:30 AM</p>
+        </div>
       </div>
     </div>
   </body>
